@@ -1,3 +1,6 @@
+Sat 01 May 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Add .github/dependabot.yml
+
 Tue 16 Mar 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	* Release v0.0.1
 
